switching back to vuefire

--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuefire": "^3.0.0-alpha.2",
-    "vuex": "^4.0.0-0",
-    "vuexfire": "^3.2.5"
+    "vuex": "^4.0.0-0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
